--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@types/node": "^16.11.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.1.13"
   }
 }
